# client-server-app-client-server-lib

./: .gitignore  CMakeLists.txt  READ.ME  README.md
client_app/: CMakeLists.txt
client_app/src/: main.cpp
display_server/: CMakeLists.txt
display_server/src/: handler.cpp  handler.hpp  main.cpp
processing_server/: CMakeLists.txt
processing_server/src/: handler.cpp  handler.hpp  main.cpp
server_lib/: CMakeLists.txt  server_lib.cpp  server_lib.hpp  validator.cpp  validator.hpp
